--- a/templates/.zshrc.j2
+++ b/templates/.zshrc.j2
@@ -2,9 +2,9 @@
 # instead make changes to ~/.zshrc.personal which is loaded after this file
 
 # Setup some standard paths
-export ANDROID_HOME=~/Library/Android/sdk
-export PATH=${PATH}:${ANDROID_HOME}/tools
-export PATH=${PATH}:${ANDROID_HOME}/platform-tools
+#export ANDROID_HOME=~/Library/Android/sdk
+#export PATH=${PATH}:${ANDROID_HOME}/tools
+#export PATH=${PATH}:${ANDROID_HOME}/platform-tools
 export PATH=/usr/local/opt/imagemagick@6/bin:${PATH}
 
 export optflags="-Wno-error=implicit-function-declaration"
