--- a/templates/.zshrc.j2
+++ b/templates/.zshrc.j2
@@ -2,10 +2,7 @@
 # instead make changes to ~/.zshrc.personal which is loaded after this file
 
 # Setup some standard paths
-#export ANDROID_HOME=~/Library/Android/sdk
-#export PATH=${PATH}:${ANDROID_HOME}/tools
-#export PATH=${PATH}:${ANDROID_HOME}/platform-tools
-export PATH=/usr/local/opt/imagemagick@6/bin:${PATH}
+export ${PATH}
 
 export optflags="-Wno-error=implicit-function-declaration"
 export LDFLAGS="-L/opt/homebrew/opt/libffi/lib"
@@ -18,7 +15,7 @@ export PKG_CONFIG_PATH="${PKG_CONFIG_PATH} /opt/homebrew/opt/zlib/lib/pkgconfig"
 # ZSH setup
 export ZSH=$HOME/.oh-my-zsh
 ZSH_THEME="robbyrussell"
-plugins=(git kubectl)
+plugins=(git brew history kubectl history-substring-search)
 DISABLE_UNTRACKED_FILES_DIRTY="true"
 ZSH_DISABLE_COMPFIX=true
 
@@ -32,7 +29,3 @@ source $ZSH/oh-my-zsh.sh
 # Load personal ZSH config which should be stored in ~/.zshrc.personal.after
 # Most ZSH config e.g. aliases etc goes here
 if [ -f ~/.zshrc.personal.after ]; then . ~/.zshrc.personal.after; fi
-
-# Load asdf
-. $HOME/.asdf/asdf.sh
-. $HOME/.asdf/completions/asdf.bash
