--- a/templates/.zshrc.j2
+++ b/templates/.zshrc.j2
@@ -14,7 +14,7 @@
 
 # ZSH setup
 export ZSH=$HOME/.oh-my-zsh
-ZSH_THEME="robbyrussell"
+ZSH_THEME="bira"
 
 # Enable plugins.
 plugins=(git brew history kubectl docker docker-compose)
